v0.0.9/_sources/plugins/network_access_policy_set_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.ise.network_access_policy_set_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.ise.network_access_policy_set_info -- Information module for Network Access Policy Set
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.ise collection <https://galaxy.ansible.com/cisco/ise>`_ (version 0.0.9).

    To install it use: :code:`ansible-galaxy collection install cisco.ise`.

    To use it in a playbook, specify: :code:`cisco.ise.network_access_policy_set_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.ise

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Network Access Policy Set.
- Get Network Access Policy Set by id.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- ciscoisesdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-id"></div>
                    <b>id</b>
                    <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Id path parameter. Policy id.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   :ref:`cisco.ise.plugins.module_utils.definitions.network_access_policy_set <ansible_collections.cisco.ise.plugins.module_utils.definitions.network_access_policy_set_module>`
      The official documentation on the **cisco.ise.plugins.module_utils.definitions.network_access_policy_set** module.
   `Network Access Policy Set reference <https://ciscoisesdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Network Access Policy Set object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Network Access Policy Set
      cisco.ise.network_access_policy_set_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
      register: result

    - name: Get Network Access Policy Set by id
      cisco.ise.network_access_policy_set_info:
        ise_hostname: "{{ise_hostname}}"
        ise_username: "{{ise_username}}"
        ise_password: "{{ise_password}}"
        ise_verify: "{{ise_verify}}"
        id: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-ise_response"></div>
                    <b>ise_response</b>
                    <a class="ansibleOptionLink" href="#return-ise_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco ISE Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;id&quot;: &quot;string&quot;,
      &quot;name&quot;: &quot;string&quot;,
      &quot;description&quot;: &quot;string&quot;,
      &quot;hitCounts&quot;: 0,
      &quot;rank&quot;: 0,
      &quot;state&quot;: &quot;string&quot;,
      &quot;default&quot;: true,
      &quot;condition&quot;: {
        &quot;conditionType&quot;: &quot;string&quot;,
        &quot;isNegate&quot;: true,
        &quot;name&quot;: &quot;string&quot;,
        &quot;id&quot;: &quot;string&quot;,
        &quot;description&quot;: &quot;string&quot;,
        &quot;dictionaryName&quot;: &quot;string&quot;,
        &quot;attributeName&quot;: &quot;string&quot;,
        &quot;attributeId&quot;: &quot;string&quot;,
        &quot;operator&quot;: &quot;string&quot;,
        &quot;dictionaryValue&quot;: &quot;string&quot;,
        &quot;attributeValue&quot;: &quot;string&quot;,
        &quot;children&quot;: [
          {
            &quot;conditionType&quot;: &quot;string&quot;,
            &quot;isNegate&quot;: true
          }
        ],
        &quot;hoursRange&quot;: {
          &quot;startTime&quot;: &quot;string&quot;,
          &quot;endTime&quot;: &quot;string&quot;
        },
        &quot;hoursRangeException&quot;: {
          &quot;startTime&quot;: &quot;string&quot;,
          &quot;endTime&quot;: &quot;string&quot;
        },
        &quot;weekDays&quot;: [
          &quot;string&quot;
        ],
        &quot;weekDaysException&quot;: [
          &quot;string&quot;
        ],
        &quot;datesRange&quot;: {
          &quot;startDate&quot;: &quot;string&quot;,
          &quot;endDate&quot;: &quot;string&quot;
        },
        &quot;datesRangeException&quot;: {
          &quot;startDate&quot;: &quot;string&quot;,
          &quot;endDate&quot;: &quot;string&quot;
        }
      },
      &quot;serviceName&quot;: &quot;string&quot;,
      &quot;isProxy&quot;: true
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

